Add Title on index.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <title>Multiple Choice Random Question, Random Answer JavaScript</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 </head>
+
 <body>
-    
-    <div class="elementor-element elementor-element-68046f0 gt3_tabs_marker-yes elementor-widget elementor-widget-toggle" data-id="68046f0" data-element_type="widget" data-widget_type="toggle.default">
-        <div class="elementor-widget-container">
-            <div class="elementor-toggle" role="tablist">
-                <progress-bar></progress-bar>
-                <app-content></app-content>
-                <app-form></app-form>
-            </div>
+    <div class="row">
+        <div class="col-md-12">
+            <progress-bar></progress-bar>
+            <app-content></app-content>
+            <app-form></app-form>
         </div>
     </div>
 
 </body>
+
 </html>
