fix some security

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,9 @@
 
 <body>
     <div class="row">
-        <div class="col-md-12">
-            <progress-bar></progress-bar>
+        <div class="col-md-12" style="padding:30px 20px 30px 30px">
+            <h1 class="text-primary text-center">Pandemi Covid-19</h1>
+            <progress-bar style="margin: 10px;"></progress-bar>
             <app-content></app-content>
             <app-form></app-form>
         </div>
